01. Introducción al Flexbox y haciendo el encabezado - 03. Terminando el header

--- a/Front-end-ONE/03.Front-End-UI/FlexBox/css/flexbox.css
+++ b/Front-end-ONE/03.Front-End-UI/FlexBox/css/flexbox.css
@@ -1,5 +1,10 @@
 .headerPrincipal .container {
   display: flex;
-  align-items: center;
+  align-items: center;                  /* alinea al medio */
   justify-content: space-between;
+}
+
+.headerPrincipal-nav {
+  display: flex;
+  
 }
