--- a/Front-end-ONE/03.Front-End-UI/FlexBox/css/flexbox.css
+++ b/Front-end-ONE/03.Front-End-UI/FlexBox/css/flexbox.css
@@ -49,8 +49,22 @@
 
 .videoSobre .container {
   display: flex;
-  /* justify-content: space-around; */
 }
+
+.videoSobre-sobre {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.videoSobre-video {
+  flex-grow: 2;
+}
+
+.videoSobre-sobre-list {
+  flex-grow: 2;
+}
+
 
 /* responsive */
 @media (max-width: 768px) {
