--- a/Front-end-ONE/03.Front-End-UI/FlexBox/css/flexbox.css
+++ b/Front-end-ONE/03.Front-End-UI/FlexBox/css/flexbox.css
@@ -59,6 +59,7 @@
 
 .videoSobre-video {
   flex-grow: 2;
+  flex-shrink: 2;
 }
 
 .videoSobre-sobre-list {
@@ -115,5 +116,9 @@
 
   .headerPrincipal-nav-link-app {
     order: -1;
+  }
+
+  .videoSobre .container {
+    flex-direction: column;
   }
 }
