--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/css/destacados.css
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/css/destacados.css
@@ -22,7 +22,8 @@
 }
 
 .destacados__panel-imagen {
-  width: 100vw;
+  width: 100vw;                             /* toma toda la pantalla */ 
+  max-width: 600px;                         /* tamaño maximo para dispositivos mayores */
   box-shadow: 0 2px 10px 5px #00000020;
   margin-bottom: .5rem;
 }
