--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/css/sobre-nosotros.css
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/css/sobre-nosotros.css
@@ -30,6 +30,10 @@
   font-weight: 700;
 }
 
+.sobre-nosotros__imagen {
+  display: none;        /* no aparece en mobile */ 
+}
+
 @media screen and (min-width: 1024px) {
   .sobre-nosotros {
       display: flex;
@@ -45,7 +49,7 @@
 
       padding-bottom: 1.5rem;
   }
-  .sobre-nosotros__imagen {
+  .sobre_nosotros__imagen {
       display: block;
   }
 }
