--- a/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/css/sobre-nosotros.css
+++ b/Front-end-ONE/03.Front-End-UI/Layouts-Responsivos/css/sobre-nosotros.css
@@ -35,16 +35,18 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .sobre-nosotros {
+  .sobre_nosotros {
       display: flex;
+      margin-top: 50px;
+      margin-bottom: 50px;
   }
-  .sobre-nosotros__contenido {
+  .sobre_nosotros__contenido {
       margin-right: 3rem;
   }
-  .sobre-nosotros__titulo {
+  .sobre_nosotros__titulo {
       text-align: left;
   }
-  .sobre-nosotros__texto--division {
+  .sobre_nosotros__texto--division {
       border-bottom: 1px solid var(--cinza-medio);
 
       padding-bottom: 1.5rem;
