--- a/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/destacados.css
+++ b/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/destacados.css
@@ -4,3 +4,53 @@
   grid-template-rows: 33.33% 33.33% 33.33%;
   height: calc(100vh - 50px);                       /* del tamaño de la pantall, le saque 50px del header */
 }
+
+.destaques__principal {
+  background: url(../img/fortnite.jpg) center / cover no-repeat;
+
+/*  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;                     /* por si es mayor */
+
+/*  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 3; */
+  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+
+
+
+}
+
+.destaques__secundario:nth-child(2) {
+  background: url(../img/pubg.jpg) center / cover no-repeat;
+/*  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; */
+/*  grid-column-start: 4;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2; */
+  grid-column: 4 / 4;
+  grid-row: 1 / 2;
+
+}
+
+.destaques__secundario:nth-child(3) {
+  background: url(../img/slack.png) center / cover no-repeat;
+  grid-column: 4 / 5;
+  grid-row: 2 / 3;
+}
+
+.destaques__secundario:nth-child(4) {
+  background: url(../img/whatsapp.png) center / cover no-repeat;
+  grid-column: 4 / 5;
+  grid-row: 3 / 4;
+}
+
+.destaques__secundario:nth-child(5) {
+  background: url(../img/cs-go.jpg) center / cover no-repeat;
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
