03. Diseñando la sección popular - 04. Finalizando sección de populares

--- a/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/populares.css
+++ b/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/populares.css
@@ -1,5 +1,5 @@
 .populares {
-  padding: 3rem 0;
+  padding: 3rem 2rem;
 }
 
 .populares__card {
@@ -24,7 +24,7 @@
   display: grid;
   grid-area: card-base;
   grid-row-gap: .5rem;
-  grid-template-rows:
+  grid-template-areas:
   "card-header"
   "card-descripcion";
   grid-template-rows: 50px auto;
@@ -36,6 +36,11 @@
   flex-wrap: wrap;
   grid-area: card-descripcion;
   padding: 1rem 0;
+
+  color: #333;
+  line-height: 1.5;
+  margin: 1rem 0;
+  text-align: justify;
 }
 
 .populares__contenido {
@@ -43,4 +48,39 @@
   flex-wrap: wrap;
   grid-area: contenido;
   padding: 1rem 0;
+}
+
+.populares__card___titulo {
+  color: #333;
+  font-size: 1.5rem;
+}
+
+.populares__card___data {
+  color: #808080;
+  font-size: 0.9rem;
+}
+
+.populares__titulo {
+  font-weight: 500;
+}
+
+.populares__icon {
+  margin-right: .25rem;
+}
+
+.populares__card___header {
+  border-bottom: 1px solid #dcdcdc;
+  display: block;
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+}
+
+.populares__boton {
+  background: transparent;
+  border: none;
+  color: #333;
+}
+
+.populares__card:last-child {
+  margin-right: 0;
 }
