--- a/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/style.css
+++ b/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/style.css
@@ -3,20 +3,29 @@
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
     grid-template-areas: 
-    "encabezado"
+    "header"
     "contenido"
-    "rodapie";
+    "footer";
     grid-template-columns: auto;                /* tamaño columnas */
-    grid-template-rows: 50px 100vh auto;
+    /* grid-template-rows: 50px 100vh auto; */
 }
 
-.encabezado {
-    grid-area: encabezado;                          /* indico el nombre del area */
+.header {
+    align-items: center;
+    display: flex;
+    grid-area: header;                      /* indico el nombre del area */
+    padding: 1.2rem 2rem;
 }
+
 .contenido {
     grid-area: contenido;
+    padding: 0 2rem;
 }
 
-.rodapie { 
-    grid-area: rodapie;
+.footer { 
+    background-color: #fdfdfd;
+    color: #333;
+    grid-area: footer;
+    padding: 1rem;
+    text-align: center;
 }
