05.Dejar el sitio receptivo - 03. Sección de populares

--- a/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/responsivo.css
+++ b/Front-end-ONE/03.Front-End-UI/CSS-Grid/assets/css/responsivo.css
@@ -18,6 +18,13 @@
   }
 
   /* populares */
-  
+  .populares__contenido {
+    flex-direction: column;
+  }
+
+  .populares__card {
+    width: 100%;
+    margin-bottom: 2rem;
+  }
 
 }
